kubernetes/apps/clubroom/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clubroom
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stg-clubroom.piny940.com
      secretName: cluster-tls
    - hosts:
        - stg-clubroom-backend.piny940.com
      secretName: cluster-tls
  rules:
    - host: stg-clubroom.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clubroom-frontend
                port:
                  number: 4400
    - host: stg-clubroom-backend.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clubroom-backend
                port:
                  number: 3000
